static/css/base.css
/*
* Prefixed by https://autoprefixer.github.io
* PostCSS: v8.3.6,
* Autoprefixer: v10.3.1
* Browsers: last 4 version
*/

@import url('https://fonts.googleapis.com/css2?family=Carattere&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Satisfy&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Caveat&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');


html {
  height: 100%;
}

body {
  background-image: url("/media/cartographer.png");
  /* height: calc(100vh - 56px); */
  color: #555;
  /* font-family: 'Lato'; */
}

.overlay {
	height: 100%;
	width: 100%;
	top: 0;
	left: 0;
	position: fixed;
	background: white;
	z-index: -1;
}

#landing-page {
  padding-top: 64px;
}

.top-20 {
  top: 20%;
}
.top-30 {
  top: 30%;
}
.top-40 {
  top: 40%;
}


/* ============================= HEIGHT CLASSES ============================= */

.min-vh-50 {
  min-height: 50vh !important; }

.min-vh-60 {
  min-height: 60vh !important; }

.min-vh-70 {
  min-height: 70vh !important; }

.min-vh-80 {
  min-height: 80vh !important; }

/* =========================== SECTION SPACING ============================== */

.section-padding {
  padding-top: 100px;
}

#header-spacer {
  padding-top: 50px;
}

@media only screen and (min-width: 768px) and (max-width: 991px) {
  .section-padding {
    padding-top: 80px;
  }
}

@media only screen and (max-width: 767px) {
  .section-padding {
    padding-top: 60px;
  }
}

ul, ol {
  padding: 0;
  list-style: none;
  margin: 0;

}

/* ======================== TEMPLATE STYLE AND COLORS ======================= */

.bg-home {
  background-image: url("/media/cartographer.png");
}

.color-lime {
  color: #cddc39;
}

/* ============================== Navbar Brand ============================== */ 

.brand-heading {
  font-family: 'Caveat', cursive;
  font-size: 1.2em;
}

@media (min-width: 768px) {
  .brand-heading {
    font-family: 'Caveat', cursive;
    font-size: 1.5em;
  }
}

/*=========================== Navbar Cart Styling =========================== */
.cart {
  text-decoration: none;
}

.number-circle {
  border-radius: 5px;
  padding: 0px 5px;
  background: #cddc39;
  border: 1px solid #666;
  color: #666;
  text-align: center;
}

/* =========================== Shopping Cart Styling ======================== */

.update-link,
.remove-item {
    cursor: pointer!important;
}

.decrement {
  border-top-left-radius: .3rem;
  border-bottom-left-radius: .3rem;
}

.increment {
  border-top-right-radius: .3rem;
  border-bottom-right-radius: .3rem;
}

.cart-qty-input .form-control {
  min-height: 40px;
}


.cart-qty .cart-qty-input {
  padding-left: 25px;
  padding-right: 25px;
  text-align: center;
  border: 1px solid #e3e9ef;
  height: 100%;
}

/* ============================= Navbar styling ============================= */

.nav-link {
  color: rgba(255, 255, 255, 0.6);
}

.nav-link:hover {
  color: rgba(255, 255, 255, 0.9);
}

/* ============================= Navbar Megamenu ============================ */

/*  Required for megamenu */
.box-shadow {
  -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
          box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}

.megamenu-image {
  max-height: 175px;
}

/* ============================= Navbar Dropdown ============================ */

/* Mobile dropdown styling */
.dropdown-menu.show {
  border-radius: 0;
}

.dropdown-menu[data-bs-popper] {
  top: 100%;
  left: 0;
  margin-top: 0;
}

.header-height-bar {
  height: 82px;
}

/* ============================= Navbar Search ============================== */

#search-products,
#search-mobile {
  width: calc(100% - 42px);
  color: #a8a7a7;
  font-family: Roboto;
  border-bottom: 1px solid #616161;
  border-right: 1px solid #616161;
  border-top: 1px solid #212121;
  border-left: 1px solid #212121;
  background-color: #3f3a58;
}

#search-products:focus,
#search-mobile:focus {
  outline: none;
  border-bottom: 1px solid #616161;
  border-right: 1px solid #616161;
  border-top: 1px solid #212121;
  border-left: 1px solid #212121;
  background-color: #3f3a58;

}

#search-products:focus-visible {
  outline: none;
}

#search-products {
  width: 75px;
  -webkit-transition: width .5s ease;
  -o-transition: width .5s ease;
  transition: width .5s ease;
  color: #a8a7a7;
  font-family: Roboto;
  border: none;
  background-color: transparent;
}

#search-products:focus {
  width: 200px;
  outline: none;
  border-bottom: 1px solid #616161;
  border-right: 1px solid #616161;
  border-top: 1px solid #212121;
  border-left: 1px solid #212121;
  background-color: #3f3a58;

}

/* ============================= Search Input =============================== */

input[name='q']::-webkit-input-placeholder {
  color: #aab7c4;
}
input[name='q']::-moz-placeholder {
  color: #aab7c4;
}
input[name='q']:-ms-input-placeholder {
  color: #aab7c4;
}
input[name='q']::-ms-input-placeholder {
  color: #aab7c4;
}
input[name='q']::placeholder {
  color: #aab7c4;
}

/* ======================== BOOTSTRAP TOAST MESSAGES ======================== */ 

 .message-container {
  position: fixed;
  top: 125px;
  left: calc(-100vw);
  z-index: 99999999999;
  height: auto;
}

.toast {
  width: 100vw;
  max-width: calc(100vw);
  -webkit-box-shadow: 0 10px 20px rgba(75, 50, 50, 0.05) !important;
          box-shadow: 0 10px 20px rgba(75, 50, 50, 0.05) !important;
}

.toast.show {
 -webkit-transform: translateX(calc(100vw));
     -ms-transform: translateX(calc(100vw));
         transform: translateX(calc(100vw));
 -webkit-transition: 1s;
 -o-transition: 1s;
 transition: 1s;
 -webkit-transition-timing-function: ease-out;
      -o-transition-timing-function: ease-out;
         transition-timing-function: ease-out;
 opacity: 1;
}
/* ... */

